--- a/calculator.css
+++ b/calculator.css
@@ -73,7 +73,7 @@ body{
     font-size: 1.5rem;
 }
 
-.output .current-operand{
+.current-operand{
     color: rgb(56, 56, 56);
     font-size: 2.5rem;
 }
